scss/left-nav.scss
@import "mixins";

.left-nav {
	display: none;
	position: absolute;
	width: $leftNavWidth;
	left: 2em;
	top: 0;
	padding: 3em 1em 0 0;
	@include border-box;

	ul, li {
		list-style-type: none;
	}

	ul {
		padding: 0 0 0 1em;
	}

	h1 {
		font-family: 'Source Sans Pro';
		font-weight: normal;
		font-size: 1.4em;
		margin: 0 0 0.5em 0;
	}

	h2 {
		font-family: 'Source Sans Pro';
		font-weight: normal;
		font-size: 1em;
		color: #555;
		margin: 0 0 0.5em 0;
	}

	section {
		margin: 0 0 2em 0;
	}
}

@media (min-width: $fullWidth) {
	.left-nav {
		display: block;
	}
}

